--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family: 'Merriweather', serif;
-    background-color: #f9f8fc;
+    background-color: #ebf2ff;
+    overflow-x: hidden;
+    transition: 0.5s;
 }
+section{
+    margin: 4rem 0;
+}
+
 .navbar{
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
-    background-color: #fff;
+    align-items: center;
+    background-color: #f9fafc;
+    box-shadow: 0 10px 15px -3px rgb(0, 0, 0 / 10%),
+                0 4px 6px -2px rgb(0, 0, 0 / 5%);
+    z-index: 9999;
 }
 .nav__item{
     margin: 10px;
@@ -26,19 +39,6 @@ body{
     font-weight: 600;
 }
 
-@media (min-width: 774px){
-    .navbar{
-        justify-content: space-between;
-        padding: 10px 30px;
-    }
-}
-
-@media(min-width: 1024px){
-    .navbar__brand{
-        width: 150px;
-    }
-}
-
 .navbar__brand{
     width: 100px;
     
@@ -49,7 +49,293 @@ body{
     margin-left: 10px;
 }
 
-.nav__item:hover{
-    border: 2px solid #FF6767;
+.brand__logo{
+    width: 100%;
+}
+
+
+.button__primary {
+    margin: 10px;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    text-transform: capitalize;
+    transition: 0.5s;
+    font-weight: 600;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 4px;
+    display: block;
+}
+
+.button__primary:hover{
+    border: 2px solid rgb(125, 91, 91);
     cursor: pointer;
+}
+
+.button__primary {
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100% );
+}
+
+button {
+    border: none;
+    cursor: pointer;
+}
+
+.container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.hero__container{
+    margin-top: 1rem;
+    /* display: flex;
+    flex-direction: row-reverse;
+    align-items: center; */
+}
+
+.hero__image__container{
+    position: relative;
+    width: 100%;
+}
+
+.hero__image{
+    position: absolute;
+    width: 100%;
+    right: auto; 
+    left: auto;
+    z-index: 2;
+    border-radius: 8px;
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 / 25%);
+}
+
+.hero__text{
+    font-weight: 900;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    color: #1d3557;
+}
+
+.hero__image__shape{
+    position: absolute;
+}
+
+/* Menu */
+
+.food__card__description{
+    padding: 15px;
+}
+
+.food__card{
+    background-color: #F9F9F9;
+}
+
+.food__card__image__container{
+    width: 100%;
+    
+}
+
+.food__image{
+    border-radius: 8px 8px 0 0;
+    width: 100%;
+}
+
+.explore__menu__text{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    color: #1d3557;
+}
+.explore__menu__lists{
+    margin-top: 45px;
+    display: flex;
+    gap: 15px;
+}
+
+/* subscribe box */
+.search__box{
+    width:100%;
+    padding: 20px;
+    margin-top: 3rem;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+.search__box__update{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+.search__box__button{
+    background-color: rgb(251, 247, 247);
+    font-weight: 700;
+    padding: 10px;
+    border: 2px solid rgb(234, 14, 14);
+    border-radius: 5px;
+}
+
+/* Quotes */
+.quote__container{
+    
+    
+    width: 100%;
+    height: 200px;
+    margin-top: 3rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    border-radius: 13px;
+    background: url(Assets/rest.jpg) center center / cover no-repeat;
+}
+.quote__background{
+    position: absolute;
+    height: 200px;
+    width: 100%;
+    border-radius: 13px;
+    /* background-color: #0a4065; */
+    opacity: 49%;
+}
+.quote__text{
+    color: white;
+    font-weight: 600;
+    padding: 5px;
+    text-align: center;
+    z-index: 3;
+    margin: 0 1rem;
+    font-size: 2rem;
+    text-shadow: 2px 2px 2px red;
+}
+
+/* Footer  */
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1rem 1rem 0 0;
+    background-image: linear-gradient( to right, #ff512f 0%, #dd2476 51%, #ff512f 100% );
+}
+footer > h1 {
+    color: #fff;
+    font-size: 60px;
+    text-align: center;
+}
+footer > ul {
+    margin-top: 1rem;
+    color: #fff;
+}
+footer > ul > li {
+    margin: 5px 0;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+@media (min-width: 768px){
+    footer {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .quote__text{
+        color: white;
+        font-weight: 600;
+        padding: 5px;
+        text-align: center;
+        z-index: 3;
+        margin: 0 1rem;
+        line-height: 1.3;
+    }
+    .quote__background{
+        position: absolute;
+        height: 300px;
+        width: 100%;
+        border-radius: 13px;
+        
+        opacity: 49%;
+    }
+    .quote__container{
+        width: 100%;
+        height: 300px;
+    }
+    .explore__menu__lists{
+        margin-top: 45px;
+        display: flex;
+        gap: 15px;
+        padding: 0 30px;
+    }
+    #pizza__card{
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+    .navbar{
+        padding: 0px 3rem;
+    }
+    .hide__mobile {
+        display: block !important;
+    }
+    .hero__image{
+        margin-top: 3rem;
+    }
+    .hero__container{
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+    }
+    .explore__menu__text{
+        font-size: 50px;
+    }
+    .explore__menu__container{
+        position: relative;
+    }
+    .explore__menu__gradient__bg{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+    );
+    z-index: -3;
+    transform: skewY(-5deg);
+    }
+    
+    .search__box{
+        display: flex;
+        align-items: center;
+    }
+}
+
+@media(min-width: 1024px){
+    .navbar__brand{
+        width: 150px;
+    }    
+    .button__primary{
+        padding: 20px;
+        font-size: 20px;
+    }
+    .container{
+        max-width: 70%;
+    }
+    .hero__description{
+        width: 100%;
+    }
+    .hero__text{
+        font-size: 3rem;
+        line-height: 1;
+    }
 }
